| Bug #10004 | floating point query crashes server | ||
|---|---|---|---|
| Submitted: | 19 Apr 2005 16:21 | Modified: | 6 May 2005 22:11 |
| Reporter: | Tom Cunningham | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S2 (Serious) |
| Version: | 5.0.3-beta-nt/5.0.4 | OS: | Windows (Win XP) |
| Assigned to: | Alexey Botchkov | CPU Architecture: | Any |
[19 Apr 2005 16:21]
Tom Cunningham
[6 May 2005 15:46]
Alexey Botchkov
bk commit - 5.0 tree (holyfoot:1.1927) BUG#10004
[6 May 2005 22:11]
Alexey Botchkov
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
