Fix for bug #10004 (Decimal operation crashes server)

mysql-test/r/type_newdecimal.result:
  test result fixed
mysql-test/t/type_newdecimal.test:
  test case added
strings/decimal.c:
  old code didn't work when both decimals had zero before the decimal point